# actix-webserver

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-build.sh  docker-compose.yaml  docker-run-cmd.sh
InstaTokTiFace/: Cargo.toml  askama.toml
actix-engine/engine/: .gitignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  webpack.config.js
actix-engine/engine/src/: main.rs
actix-engine/engine/static/InstaTokTiFace/styles/: styles.css
actix-engine/engine/static/InstaTokTiFace/templates/: blog.html  blog_base.html
actix-engine/engine/static/base/styles/: base.css
actix-engine/engine/static/base/templates/: frame.html
actix-engine/engine/static/homepage/styles/: styles.css
actix-engine/engine/static/homepage/templates/: index.html  resume.html
actix-engine/engine/static/vcg/js/: bundle.js  entry.ts  helpers.js  helpers.ts  objects.js  objects.ts  script.js  vcg-entry.js
actix-engine/engine/static/vcg/styles/: styles.css
actix-engine/engine/static/vcg/templates/: index.html  result_page.html
actix-engine/engine/static/vcg/ts/: entry.ts  helpers.ts  objects.ts  resultpage.ts
actix-engine/engine/static/vcg_app/js/: helpers.js  objects.js  script.js
actix-engine/engine/static/vcg_app/styles/: styles.css
vcg/: .gitignore  Cargo.toml  askama.toml
vcg/src/: bid_post_back_content.rs  client_bid_info.rs  ext_types.rs  index_template.rs  lib.rs  result_object.rs  result_page.rs  routes.rs  scope.rs  test_data.rs  vcg_auction_owner.rs  vcg_auction_postprocessor.rs  vcg_auction_routine.rs  vcg_input_analyzer.rs
vcg/sub_crates/vcg_auction/: Cargo.toml
vcg/sub_crates/vcg_auction/src/: auction_profiler.rs  iterator_as.rs  lib.rs  vcg_auction.rs  vcg_base_types.rs  vcg_compute.rs
vcg_app/: Cargo.toml  askama.toml
vcg_app/src/: client_buffer.rs  ext_types.rs  index_template.rs  lib.rs  routes.rs  vcg_auction_owner.rs  vcg_auction_routine.rs
vcg_app/sub_crates/vcg_auction/actix-engine/: Cargo.toml
vcg_app/sub_crates/vcg_auction/homepage/: Cargo.toml
vcg_app/sub_crates/vcg_auction/src/: auction_profiler.rs  main.rs
vcg_app/templates/: result_page.html
(+32 files in other folders)
