[package]
name = "vcg_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_plugin = {path="../actix-engine/app_plugin"}
actix-web = "4.*"
image = "*"
reqwest = { version = "*", features = ["json"] }
tokio = { version = "*", features = ["full"] }
actix-files = "*"
async-trait = "*"
